// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageHeaderContent is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPageHeaderContent testClass1 testClass2 emotion-euiPageHeaderContent"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    />
  </div>
</div>
`;

exports[`EuiPageHeaderContent props alignItems bottom is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    >
      <h1
        class="euiTitle emotion-euiTitle-l"
      >
        Page title
      </h1>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRowReverse euiFlexGroup--wrap"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button>
            Button 1
          </button>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button>
            Button 2
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props alignItems center is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    >
      <h1
        class="euiTitle emotion-euiTitle-l"
      >
        Page title
      </h1>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRowReverse euiFlexGroup--wrap"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button>
            Button 1
          </button>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button>
            Button 2
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props alignItems stretch is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    >
      <h1
        class="euiTitle emotion-euiTitle-l"
      >
        Page title
      </h1>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRowReverse euiFlexGroup--wrap"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button>
            Button 1
          </button>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button>
            Button 2
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props alignItems top is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    >
      <h1
        class="euiTitle emotion-euiTitle-l"
      >
        Page title
      </h1>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRowReverse euiFlexGroup--wrap"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button>
            Button 1
          </button>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button>
            Button 2
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props breadcrumbs is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <nav
    aria-label="aria-label"
    class="euiBreadcrumbs testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <ol
      class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list-isTruncated"
    >
      <li
        class="euiBreadcrumb emotion-euiBreadcrumb-page-isTruncated"
      >
        <a
          class="euiLink euiBreadcrumb__content customClass emotion-euiLink-primary-euiBreadcrumb__content-page-isTruncated"
          data-test-subj="breadcrumbsAnimals"
          href="#"
          rel="noreferrer"
        >
          Animals
        </a>
      </li>
      <li
        class="euiBreadcrumb emotion-euiBreadcrumb-page-isTruncated"
      >
        <span
          aria-current="page"
          class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncatedLast-euiTextColor-default"
        >
          Edit
        </span>
      </li>
    </ol>
  </nav>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    />
  </div>
</div>
`;

exports[`EuiPageHeaderContent props children is rendered 1`] = `
<div
  class="emotion-euiPageHeaderContent"
>
  <div
    class="css-ljpjbj-flex-center"
  >
    <p>
      Anything
    </p>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props children is rendered 2`] = `
<div
  class="emotion-euiPageHeaderContent"
>
  <div
    class="css-ljpjbj-flex-center"
  >
    Child
  </div>
</div>
`;

exports[`EuiPageHeaderContent props children is rendered even if content props are passed 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent-border"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    >
      <h1
        class="euiTitle emotion-euiTitle-l"
      >
        Page title
      </h1>
      <div
        class="euiPageHeaderContent__bottom"
      >
        <div
          class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
        />
        Child
        <div
          class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
        />
        <div
          class="euiTabs euiTabs--large"
          role="tablist"
        >
          <button
            aria-selected="true"
            class="euiTab euiTab-isSelected"
            role="tab"
            type="button"
          >
            <span
              class="euiTab__content"
            >
              Tab 1
            </span>
          </button>
          <button
            aria-selected="false"
            class="euiTab"
            role="tab"
            type="button"
          >
            <span
              class="euiTab__content"
            >
              Tab 2
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRowReverse euiFlexGroup--wrap"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button>
            Button 1
          </button>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button>
            Button 2
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props description is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiText emotion-euiText-constrainedWidth-m-euiTextColor-inherit"
      >
        <p>
          Description
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props pageTitle is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    >
      <h1
        class="euiTitle emotion-euiTitle-l"
      >
        Page title
      </h1>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props pageTitle is rendered with icon 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    >
      <h1
        class="euiTitle emotion-euiTitle-l"
      >
        <span
          class="emotion-euiPageHeaderContent__titleIcon"
          data-euiicon-type="logoKibana"
        />
        Page title
      </h1>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props pageTitle is rendered with icon and iconProps 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    >
      <h1
        class="euiTitle emotion-euiTitle-l"
      >
        <span
          class="testClass1 testClass2 emotion-euiPageHeaderContent__titleIcon"
          data-euiicon-type="logoKibana"
          data-test-subj="test subject string"
        >
          aria-label
        </span>
        Page title
      </h1>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props pageTitle is rendered with pageTitleProps 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    >
      <h1
        aria-label="aria-label"
        class="euiTitle testClass1 testClass2 emotion-euiTitle-l"
        data-test-subj="test subject string"
      >
        Page title
      </h1>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props responsive is rendered as false 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    />
  </div>
</div>
`;

exports[`EuiPageHeaderContent props responsive is rendered as reverse 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    />
  </div>
</div>
`;

exports[`EuiPageHeaderContent props rightSideItems is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    />
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRowReverse euiFlexGroup--wrap"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button>
            Button 1
          </button>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button>
            Button 2
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props rightSideItems is rendered with rightSideGroupProps 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    />
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        aria-label="aria-label"
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive euiFlexGroup--wrap testClass1 testClass2"
        data-test-subj="test subject string"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button>
            Button 1
          </button>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button>
            Button 2
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props tabs is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    >
      <h1
        class="emotion-euiScreenReaderOnly"
      >
        Tab 1
      </h1>
      <div
        class="euiTabs euiTabs--xlarge"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="euiTab euiTab-isSelected"
          role="tab"
          type="button"
        >
          <span
            class="euiTab__content"
          >
            Tab 1
          </span>
        </button>
        <button
          aria-selected="false"
          class="euiTab"
          role="tab"
          type="button"
        >
          <span
            class="euiTab__content"
          >
            Tab 2
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props tabs is rendered with tabsProps 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem"
    >
      <h1
        class="emotion-euiScreenReaderOnly"
      >
        Tab 1
      </h1>
      <div
        aria-label="aria-label"
        class="euiTabs euiTabs--xlarge testClass1 testClass2"
        data-test-subj="test subject string"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="euiTab euiTab-isSelected"
          role="tab"
          type="button"
        >
          <span
            class="euiTab__content"
          >
            Tab 1
          </span>
        </button>
        <button
          aria-selected="false"
          class="euiTab"
          role="tab"
          type="button"
        >
          <span
            class="euiTab__content"
          >
            Tab 2
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
